[package]
name = "rust_split"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7", features = ["im"]}
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde_json = "1.0"
